--- a/高级深度学习/卷积神经网络.md
+++ b/高级深度学习/卷积神经网络.md
@@ -11,3 +11,25 @@
 ![image-20220708172807780](C:\Users\adam\AppData\Roaming\Typora\typora-user-images\image-20220708172807780.png)
 
 ![image-20220708172849896](C:\Users\adam\AppData\Roaming\Typora\typora-user-images\image-20220708172849896.png)
+
+
+
+
+
+
+
+
+
+
+
+### 下采样的意义：
+
+max pooling
+
+average pollingf
+
+- polling试讲小领域内的特征点整合起来得到新特征的过程
+
+- 抵抗小的噪声，包括平移、伸缩。
+
+- 无法抵抗图像旋转噪声
