--- a/中职通/Python基础核心语法.ipynb
+++ b/中职通/Python基础核心语法.ipynb
@@ -272,6 +272,196 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1.23'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-3567f3763b27>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'1.23'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1.23'"
+     ]
+    }
+   ],
+   "source": [
+    "int('1.23')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(4.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3\n",
+      "-3\n",
+      "3\n",
+      "-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 取余想下取整\n",
+    "print(-9//4)\n",
+    "print(9//-4)\n",
+    "print(-9%4)\n",
+    "print(9%-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=b=c=10  # 链式赋值\n",
+    "a,b,c=10,20,30 # 系列解包赋值\n",
+    "a,b=b,a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ccdd'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a='dd'\n",
+    "b='cc'\n",
+    "b+=a\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0040000000000000036\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1.004%1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "请输入正确的成绩\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.输入一个百分制成绩\n",
+    "score = int(input('输入成绩'))\n",
+    "if score>=90 and score<=100:\n",
+    "    print('A')\n",
+    "elif score>=80 and score<=89:\n",
+    "    print('B')\n",
+    "elif score>=70 and score<=79:\n",
+    "    print('C')\n",
+    "elif score>=60 and score<=69:\n",
+    "    print('D')\n",
+    "elif score>=0 and score<60:\n",
+    "    print('E')\n",
+    "else:\n",
+    "    print(\"请输入正确的成绩\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.数字求和\n",
+    "num1 = eval(input(\"请输入数字1\")) #1.2\n",
+    "num2 = eval(input(\"请输入数字2\")) #3.4\n",
+    "print(num1 + num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "是负数\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.编写程序，通过使用 if...elif...else 语句判断数字是正数、负数或零:\n",
+    "num = eval(input(\"请输入一个数字\"))\n",
+    "if num > 0:\n",
+    "    print(\"是正数\")\n",
+    "elif num < 0:\n",
+    "    print(\"是负数\")\n",
+    "elif num == 0:\n",
+    "    print(\"是零\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
