--- a/中职通/Python基础核心语法.ipynb
+++ b/中职通/Python基础核心语法.ipynb
@@ -462,6 +462,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你猜对了，答案是84\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. *制作⼀个满⾜如下功能的猜数游戏：计算机随机⽣成⼀个100以内的正整数；⽤户通过键盘输⼊数字，猜测计算机所⽣成的随机数。\n",
+    "import random\n",
+    "a = random.randint(1,100)\n",
+    "l, r = 1, 100\n",
+    "b = int(input(\"请输入一个数\"))\n",
+    "while a != b:\n",
+    "    if a > b:\n",
+    "        l = b\n",
+    "        b = int(input(f\"猜小了，区间为:[{l}-{r}]\"))\n",
+    "    else:\n",
+    "        r = b\n",
+    "        b = int(input(f\"猜大了，区间为:[{l}-{r}]\"))\n",
+    "print(f\"你猜对了，答案是{b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1*1=1\t\n",
+      "2*1=2\t2*2=4\t\n",
+      "3*1=3\t3*2=6\t3*3=9\t\n",
+      "4*1=4\t4*2=8\t4*3=12\t4*4=16\t\n",
+      "5*1=5\t5*2=10\t5*3=15\t5*4=20\t5*5=25\t\n",
+      "6*1=6\t6*2=12\t6*3=18\t6*4=24\t6*5=30\t6*6=36\t\n",
+      "7*1=7\t7*2=14\t7*3=21\t7*4=28\t7*5=35\t7*6=42\t7*7=49\t\n",
+      "8*1=8\t8*2=16\t8*3=24\t8*4=32\t8*5=40\t8*6=48\t8*7=56\t8*8=64\t\n",
+      "9*1=9\t9*2=18\t9*3=27\t9*4=36\t9*5=45\t9*6=54\t9*7=63\t9*8=72\t9*9=81\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.打印九九乘法表\n",
+    "i = 1\n",
+    "while i <= 9:\n",
+    "    j=1\n",
+    "    while j <= i:\n",
+    "        print(f\"{i}*{j}={i*j}\",end='\\t')\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
